@@ -1,0 +1,8 @@
+	.text
+	.global _start
+_start:
+	.byte 1
+	.global data
+	.data
+data:
+	.byte 2
