@@ -1,3 +1,12 @@
+2003-03-22  H.J. Lu  <hongjiu.lu@intel.com>
+
+	PR ld/4210
+	* ld-pe/image_size.d: New file.
+	* ld-pe/image_size.s: Likewise.
+	* ld-pe/image_size.t: Likewise.
+
+	* ld-pe/pe.exp: Run image_size.
+
 2007-03-22  H.J. Lu  <hongjiu.lu@intel.com>
 
 	PR ld/4007
